--- a/templates/make_reservation.html
+++ b/templates/make_reservation.html
@@ -79,7 +79,7 @@
     </main>
 
     <footer>
-        <p>&copy; {{ now.year }} Famille Bourrut - Noirmoutier</p>
+        <p>&copy; {{ current_year }} Famille Bourrut - Noirmoutier</p>
     </footer>
 </body>
 </html>
