--- a/templates/profile.html
+++ b/templates/profile.html
@@ -68,7 +68,7 @@
     </main>
 
     <footer>
-        <p>&copy; {{ now.year }} Famille Bourrut - Noirmoutier</p>
+        <p>&copy; {{ current_year }} Famille Bourrut - Noirmoutier</p>
     </footer>
 </body>
 </html>
